--- a/app/src/main/res/layout/activity_image_grid_view.xml
+++ b/app/src/main/res/layout/activity_image_grid_view.xml
@@ -8,9 +8,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="tobycatapps.c3717.cst.bcit.ca.android3717project1.ImageGridViewActivity">
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <GridView
+        android:id="@+id/grid_view_images"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
