+ Added a handler for the entire application to share and use for doing things on background, worker threads, or when accessing the UI thread to update it. + Added a StartImageGridViewActivity to test the ImageGridViewActivity....should be removed later for production release - Got the ImageGridViewActivity to display images from the internet when it is started by a proper starting intent - TODO: start the ImageSwipeViewActivity when a thumbnail of a cat is tapped - TODO: make the thumbnails displayed in this activity bigger..and possible other aesthetic things

--- a/app/src/main/res/layout/activity_image_grid_view.xml
+++ b/app/src/main/res/layout/activity_image_grid_view.xml
@@ -11,6 +11,12 @@
     <GridView
         android:id="@+id/grid_view_images"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:columnWidth="90dp"
+        android:numColumns="auto_fit"
+        android:verticalSpacing="10dp"
+        android:horizontalSpacing="10dp"
+        android:stretchMode="columnWidth"
+        android:gravity="center" />
 
 </RelativeLayout>
