search button added to title page

--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -32,11 +32,19 @@
         />
 
     <Button
-        android:id="@+id/btn_week"
-        android:text="@string/btn_week"
+    android:id="@+id/btn_week"
+    android:text="@string/btn_week"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@id/btn_random"
+    android:gravity="center" />
+
+    <Button
+        android:id="@+id/btn_search"
+        android:text="@string/btn_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/btn_random"
+        android:layout_below="@id/btn_week"
         android:gravity="center" />
 
 </RelativeLayout>
