DId some work on image_swipe_view and imageswipeactivity Added a button to go from random pets to imageswipeactivity for testing

--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -30,6 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_login"
         android:gravity="center"
+        android:onClick="TemporaryButton"
         />
 
     <Button
