--- a/app/src/main/res/layout/activity_image_swipe_view.xml
+++ b/app/src/main/res/layout/activity_image_swipe_view.xml
@@ -18,4 +18,27 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <Button
+        android:id="@+id/backBTN"
+        android:background="#FFFFFF"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back Button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:onClick="BackClick"/>
+
+    <Button
+        android:id="@+id/NextBTN"
+        android:background="#FFFFFF"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Next Button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:onClick="NextClick"/>
+
 </RelativeLayout>
