--- a/app/src/main/res/layout/activity_image_swipe_view.xml
+++ b/app/src/main/res/layout/activity_image_swipe_view.xml
@@ -21,9 +21,11 @@
     <Button
         android:id="@+id/backBTN"
         android:background="#FFFFFF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back Button"
+        android:alpha=".30"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:text="Back"
+        android:textSize="30sp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -32,10 +34,12 @@
     <Button
         android:id="@+id/NextBTN"
         android:background="#FFFFFF"
+        android:alpha=".30"
         style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Next Button"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:text="Next"
+        android:textSize="30sp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
