- added the SearchActivity     - it is fully functional...

--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/bannerImage"
         android:gravity="center"
-        />
+        android:onClick="launchLogin" />
 
     <Button
         android:id="@+id/btn_random"
@@ -30,16 +30,16 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_login"
         android:gravity="center"
-        android:onClick="TemporaryButton"
-        />
+        android:onClick="launchRandomPets" />
 
     <Button
-    android:id="@+id/btn_week"
-    android:text="@string/btn_week"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_below="@id/btn_random"
-    android:gravity="center" />
+        android:id="@+id/btn_week"
+        android:text="@string/btn_week"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btn_random"
+        android:gravity="center"
+        android:onClick="launchWeeklyPets" />
 
     <Button
         android:id="@+id/btn_search"
@@ -47,6 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_week"
-        android:gravity="center" />
+        android:gravity="center"
+        android:onClick="launchSearch" />
 
 </RelativeLayout>
