--- a/app/src/main/res/layout/activity_image_grid_view.xml
+++ b/app/src/main/res/layout/activity_image_grid_view.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="tobycatapps.c3717.cst.bcit.ca.android3717project1.ImageGridViewActivity">
+    tools:context="tobycatapps.c3717.cst.bcit.ca.android3717project1.activity.ImageGridViewActivity">
 
     <GridView
         android:id="@+id/grid_view_images"
