--- a/app/src/main/res/layout/activity_image_swipe_view.xml
+++ b/app/src/main/res/layout/activity_image_swipe_view.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="tobycatapps.c3717.cst.bcit.ca.android3717project1.ImageSwipeViewActivity"
+    tools:context="tobycatapps.c3717.cst.bcit.ca.android3717project1.activity.ImageSwipeViewActivity"
     android:id="@+id/imageSwipeView">
 
     <ImageView
