--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="tobycatapps.c3717.cst.bcit.ca.android3717project1.LoginActivity">
+    tools:context="tobycatapps.c3717.cst.bcit.ca.android3717project1.activity.LoginActivity">
 
     <TextView
         android:text="@string/hello_world"
