--- a/app/src/main/res/menu/image_grid_view.xml
+++ b/app/src/main/res/menu/image_grid_view.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="tobycatapps.c3717.cst.bcit.ca.android3717project1.ImageGridViewActivity" >
+    tools:context="tobycatapps.c3717.cst.bcit.ca.android3717project1.activity.ImageGridViewActivity" >
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
