--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -62,13 +62,13 @@
                 <CheckBox
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="New CheckBox"
+                    android:text="Tabby"
                     android:id="@+id/checkBox5"/>
 
                 <CheckBox
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="New CheckBox"
+                    android:text="Playing"
                     android:id="@+id/checkBox7"/>
 
                 <CheckBox
@@ -129,28 +129,45 @@
         android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="right" >
+        android:orientation="horizontal" >
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/feedback"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#f00"
+            android:textSize="@dimen/large_text"
+            android:layout_gravity="center_vertical|start"
+            android:visibility="gone" />
 
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/spinner"
-            android:visibility="invisible"/>
+            android:layout_gravity="start"
+            android:visibility="gone" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="clearFields"
-            android:text="@string/reset_button_activity_search" />
+            android:text="@string/reset_button_activity_search"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_gravity="end" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="search"
-            android:text="@string/search_button_activity_search" />
+            android:text="@string/search_button_activity_search"
+            android:layout_gravity="end" />
 
     </LinearLayout>
 
