--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,14 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+    <style name="AppTheme" parent="android:Theme.Holo.Light.NoActionBar.Fullscreen">
         <!-- Customize your theme here. -->
-        <item name ="android:textColor">#FFCC00</item>
-        <item name ="android:background">#FFCC00</item>
-
+        <item name ="android:textColor">#000000</item>
+        <item name ="android:background">#99FF33</item>
     </style>
 
+    <style name="CustomButtons">
+        <item name ="android:background">#FFFFFF</item>
+        <item name ="android:textColor">#000000</item>
+    </style>
 </resources>
