--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -10,7 +10,7 @@
 
     <ImageView
         android:id="@+id/bannerImage"
-        android:src="@drawable/ic_launcher"
+        android:src="@drawable/logo"
         android:layout_width="match_parent"
         android:layout_height="100dip" />
 
