--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -8,55 +8,63 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MyActivity">
 
-    <ImageView
-        android:id="@+id/bannerImage"
-        android:src="@drawable/logo"
-        android:layout_width="match_parent"
-        android:layout_height="100dip" />
-
-    <Button
-        android:id="@+id/btn_login"
-        android:text="@string/btn_login"
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/bannerImage"
-        android:gravity="center"
-        android:onClick="launchLogin" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true">
 
-    <Button
-        android:id="@+id/btn_random"
-        android:text="@string/btn_random"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btn_login"
-        android:gravity="center"
-        android:onClick="launchRandomPets" />
+        <ImageView
+            android:id="@+id/bannerImage"
+            android:src="@drawable/logo"
+            android:layout_width="match_parent"
+            android:layout_height="100dip" />
 
-    <Button
-        android:id="@+id/btn_week"
-        android:text="@string/btn_week"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btn_random"
-        android:gravity="center"
-        android:onClick="launchWeeklyPets" />
+        <Button
+            android:id="@+id/btn_login"
+            android:text="@string/btn_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/bannerImage"
+            android:gravity="center"
+            android:onClick="launchLogin" />
 
-    <Button
-        android:id="@+id/btn_search"
-        android:text="@string/btn_search"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btn_week"
-        android:gravity="center"
-        android:onClick="launchSearch" />
+        <Button
+            android:id="@+id/btn_random"
+            android:text="@string/btn_random"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btn_login"
+            android:gravity="center"
+            android:onClick="launchRandomPets" />
 
-    <Button
-        android:id="@+id/btn_imgUpload"
-        android:text="@string/btn_imgUpload"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btn_search"
-        android:gravity="center"
-        android:onClick="launchImageUpload" />
+        <Button
+            android:id="@+id/btn_week"
+            android:text="@string/btn_week"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btn_random"
+            android:gravity="center"
+            android:onClick="launchWeeklyPets" />
+
+        <Button
+            android:id="@+id/btn_search"
+            android:text="@string/btn_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btn_week"
+            android:gravity="center"
+            android:onClick="launchSearch" />
+
+        <Button
+            android:id="@+id/btn_imgUpload"
+            android:text="@string/btn_imgUpload"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btn_search"
+            android:gravity="center"
+            android:onClick="launchImageUpload" />
+    </RelativeLayout>
 
 </RelativeLayout>
