--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="AppTheme" parent="android:Theme.Holo.Light.NoActionBar.Fullscreen">
         <!-- Customize your theme here. -->
         <item name ="android:textColor">#000000</item>
-        <item name ="android:background">#99FF33</item>
+        <item name ="android:background">#99CCFF</item>
     </style>
 
     <style name="CustomButtons">
