--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true">
 
         <ImageView
             android:id="@+id/bannerImage"
@@ -23,6 +24,8 @@
 
         <Button
             android:id="@+id/btn_login"
+            android:src="@drawable/custom_button_normal"
+            android:background="@drawable/custom_button_normal"
             android:text="@string/btn_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -32,6 +35,8 @@
 
         <Button
             android:id="@+id/btn_random"
+            android:src="@drawable/custom_button_normal"
+            android:background="@drawable/custom_button_normal"
             android:text="@string/btn_random"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,6 +46,8 @@
 
         <Button
             android:id="@+id/btn_week"
+            android:src="@drawable/custom_button_normal"
+            android:background="@drawable/custom_button_normal"
             android:text="@string/btn_week"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -50,6 +57,8 @@
 
         <Button
             android:id="@+id/btn_search"
+            android:src="@drawable/custom_button_normal"
+            android:background="@drawable/custom_button_normal"
             android:text="@string/btn_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -59,6 +68,7 @@
 
         <Button
             android:id="@+id/btn_imgUpload"
+            android:background="@drawable/button_selector"
             android:text="@string/btn_imgUpload"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
