--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,11 +4,11 @@
     <style name="AppTheme" parent="android:Theme.Holo.Light.NoActionBar.Fullscreen">
         <!-- Customize your theme here. -->
         <item name ="android:textColor">#000000</item>
-        <item name ="android:background">#99CCFF</item>
+        <item name ="android:background">#FFCC00</item>
     </style>
 
-    <style name="CustomButtons">
-        <item name ="android:background">#FFFFFF</item>
-        <item name ="android:textColor">#000000</item>
+    <style name="CustomButtons" parent="android:Theme">
+        <item name ="android:background">#000000</item>
+        <item name ="android:textColor">#FFFFFF</item>
     </style>
 </resources>
