--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,11 +6,57 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="tobycatapps.c3717.cst.bcit.ca.android3717project1.activity.LoginActivity">
+    tools:context="tobycatapps.c3717.cst.bcit.ca.android3717project1.activity.LoginActivity"><![CDATA[
 
-    <TextView
+    TextView
         android:text="@string/hello_world"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    ]]>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Login"
+            android:textSize="40sp"
+            android:id="@+id/textViewLogin"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="5dp"/>
+
+        <EditText
+            android:background="#FFFFFF"
+            android:layout_below="@id/textViewLogin"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/editTextUsername"
+            android:layout_marginBottom="5dp"/>
+
+        <EditText
+            android:background="#FFFFFF"
+            android:layout_below="@id/editTextUsername"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:inputType="numberPassword"
+            android:ems="10"
+            android:id="@+id/editTextPassword"
+            android:layout_marginBottom="5dp"/>
+
+        <Button
+            android:src="@drawable/custom_button_normal"
+            android:background="@drawable/custom_button_normal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/editTextPassword"
+            android:layout_centerHorizontal="true"
+            android:text="Go!"
+            android:id="@+id/button" />
+    </RelativeLayout>
 </RelativeLayout>
