Log out complete!

--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -65,6 +65,16 @@
             android:gravity="center"
             android:onClick="launchImageUpload" />
 
+        <Button
+            android:id="@+id/btn_logout"
+            android:src="@drawable/custom_button_normal"
+            android:background="@drawable/custom_button_normal"
+            android:text="@string/btn_logout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btn_imgUpload"
+            android:gravity="center"
+            android:onClick="launchLogout" />
 
         <Button
             android:id="@+id/btn_login"
@@ -76,6 +86,7 @@
             android:layout_below="@id/btn_imgUpload"
             android:gravity="center"
             android:onClick="launchLogin" />
+
     </RelativeLayout>
 
 </RelativeLayout>
