--- a/app/src/main/res/layout/activity_account_creation.xml
+++ b/app/src/main/res/layout/activity_account_creation.xml
@@ -8,73 +8,97 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="tobycatapps.c3717.cst.bcit.ca.android3717project1.activity.AccountCreation">
 
-    <TextView
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:layout_alignParentTop="true"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/ac_tv_title" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:layout_below="@id/ac_tv_title"
-        android:text="Small Text"
-        android:id="@+id/ac_tv_instructions" />
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/ac_tv_instructions"
-        android:id="@+id/ac_ll_username">
+        android:layout_centerVertical="true"
+        android:layout_alignLeft="@+id/button"
+        android:layout_alignStart="@+id/button">
 
         <TextView
-            android:text="@string/hello_world"
-            android:layout_weight="0.4"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/ac_tv_label_username"/>
-
-        <EditText
-            android:layout_weight="0.6"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/ac_et_label_username" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/ac_ll_username"
-        android:id="@+id/ac_ll_user_pin">
+            android:gravity="center_horizontal"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Register Account"
+            android:id="@+id/ac_tv_title"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="5dp"
+            android:textSize="30dp" />
 
         <TextView
-            android:layout_weight="0.4"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="New Text"
-            android:id="@+id/ac_tv_label_pin" />
+            android:gravity="center_horizontal"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:layout_below="@id/ac_tv_title"
+            android:text="Fill in your account name and a 4 digit pin to register for an account with us!"
+            android:id="@+id/ac_tv_instructions"
+            android:layout_marginBottom="5dp" />
 
-        <EditText
-            android:layout_weight="0.6"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/ac_et_label_pin"/>
-    </LinearLayout>
+            android:layout_below="@id/ac_tv_instructions"
+            android:id="@+id/ac_ll_username"
+            android:layout_marginBottom="5dp">
+
+            <TextView
+                android:text="UserHandle"
+                android:layout_weight="0.4"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/ac_tv_label_username"
+                android:textStyle="bold" />
+
+            <EditText
+                android:layout_weight="0.6"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="#FFFFFF"
+                android:id="@+id/ac_et_label_username" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ac_ll_username"
+            android:id="@+id/ac_ll_user_pin"
+            android:layout_marginBottom="5dp">
+
+            <TextView
+                android:layout_weight="0.4"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Pin"
+                android:id="@+id/ac_tv_label_pin"
+                android:textStyle="bold" />
+
+            <EditText
+                android:layout_weight="0.6"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="#FFFFFF"
+                android:id="@+id/ac_et_label_pin"
+                android:maxLength="4" />
+        </LinearLayout>
+
+    </RelativeLayout>
 
     <Button
+        android:src="@drawable/custom_button_normal"
+        android:background="@drawable/custom_button_normal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_margin="5dp"
-        android:text="New Button"
+        android:text="Go!"
         android:id="@+id/button"
-        android:onClick="submitAccount"/>
+        android:onClick="submitAccount"
+        android:layout_marginBottom="5dp"/>
 
 </RelativeLayout>
