Added some code for registration. Hope to get it to go from Register straight to Main menu after Register Success. Still need register function to return true/false to make that work
Worked on my account

--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -76,6 +76,17 @@
             android:gravity="center"
             android:onClick="launchLogin" />
 
+        <Button
+            android:id="@+id/btn_MyAccount"
+            android:src="@drawable/custom_button_normal"
+            android:background="@drawable/custom_button_normal"
+            android:text="@string/btn_myAccount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btn_login"
+            android:gravity="center"
+            android:onClick="launchMyAccount" />
+
     </RelativeLayout>
 
 </RelativeLayout>
