--- a/app/src/main/res/layout/activity_image_grid_view.xml
+++ b/app/src/main/res/layout/activity_image_grid_view.xml
@@ -16,6 +16,16 @@
         android:verticalSpacing="10dp"
         android:horizontalSpacing="10dp"
         android:stretchMode="columnWidth"
+        android:layout_above="@id/btn_addImage"
         android:gravity="center" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/btn_addImage"
+        android:visibility="gone"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
