--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/uploader_search_edit_text" />
 
-    <View
+    <!--View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#ccc"
@@ -126,7 +126,7 @@
         android:layout_height="1dp"
         android:background="#ccc"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_marginBottom="@dimen/activity_vertical_margin" />
+        android:layout_marginBottom="@dimen/activity_vertical_margin" /-->
 
     <LinearLayout
         android:layout_width="match_parent"
