i changed something here and i dont know what it is. COMMTTING.

--- a/app/src/main/res/layout/activity_image_grid_view.xml
+++ b/app/src/main/res/layout/activity_image_grid_view.xml
@@ -11,8 +11,9 @@
     <GridView
         android:id="@+id/grid_view_images"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:numColumns="3"
+        android:layout_alignParentTop="true"
         android:verticalSpacing="10dp"
         android:horizontalSpacing="10dp"
         android:stretchMode="columnWidth"
